--- a/package.json
+++ b/package.json
@@ -22,17 +22,14 @@
   },
   "homepage": "https://github.com/LikeSouvenir/LocalNodeIndexer#readme",
   "devDependencies": {
+    "@types/express": "^5.0.6",
+    "@types/node": "^20.19.33",
+    "ts-node-dev": "^2.0.0",
+    "tsx": "^4.7.1",
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "viem": "^2.46.2",
-    "@hono/node-server": "^1.19.9",
-    "hono": "^4.12.0"
-  },
-  "devDependencies": {
-    "@types/node": "^20.11.17",
-    "tsx": "^4.7.1",
-    "typescript": "^5.8.3"
+    "express": "^5.2.1",
+    "viem": "^2.46.2"
   }
-
 }
