--- a/package.json
+++ b/package.json
@@ -22,14 +22,24 @@
   },
   "homepage": "https://github.com/LikeSouvenir/LocalNodeIndexer#readme",
   "devDependencies": {
+    "@eslint/js": "^10.0.1",
     "@types/express": "^5.0.6",
     "@types/node": "^20.19.33",
+    "@typescript-eslint/eslint-plugin": "^8.56.1",
+    "@typescript-eslint/parser": "^8.56.1",
+    "drizzle-kit": "^0.31.9",
+    "eslint": "^10.0.2",
+    "globals": "^17.3.0",
+    "prettier": "^3.8.1",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.7.1",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.56.1"
   },
   "dependencies": {
+    "drizzle-orm": "^0.45.1",
     "express": "^5.2.1",
+    "pg": "^8.19.0",
     "viem": "^2.46.2"
   }
 }
